added styling and created a global styles page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = 'My Astro Learning Blog';
 ---
 
@@ -21,7 +23,7 @@ const pageTitle = 'My Astro Learning Blog';
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>1
+    <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
 
