--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,13 @@
 ---
 import Navigation from '../components/navigation.astro';
 import Hamburger from '../components/hamburger.astro';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 
 <header>
   <nav>
     <Hamburger />
+    <ThemeIcon />
     <Navigation />
   </nav>
 </header>
