--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,15 @@ html {
   * {
     box-sizing: border-box;
   }
+
+  html.dark {
+    background-color: #0d0950;
+    color: #fff;
+  }
+  
+  .dark .nav-links a {
+    color: #fff;
+  }
   
   h1 {
     margin: 1rem 0;
